--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -12,7 +12,7 @@ header {
     align-self: flex-end;
     color: whitesmoke;
     span {
-      background-color: $clr2;
+      background-color: green;
       padding: 4px;
       margin: 10px;
       border-radius: 50%;
