--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -17,28 +17,44 @@
     }
   }
 
-  @include for-narrow-layout {
-    background-color: blue($color: #000000);
+  @include for-mobile-layout {
+    background-color: black;
     grid-template-columns:
-      minmax(20px, 1fr)
+      minmax(24px, 1fr)
       minmax(auto, $mobile-breakpoint)
-      minmax(20px, 1fr);
+      minmax(24px, 1fr);
+  }
+
+  @include for-tablet-layout {
+    background-color: blue;
+    grid-template-columns:
+      minmax(24px, 1fr)
+      minmax(auto, $mobile-breakpoint)
+      minmax(24px, 1fr);
+  }
+
+  @include for-narrow-layout {
+    background-color: red;
+    grid-template-columns:
+      minmax(40px, 1fr)
+      minmax(auto, $mobile-breakpoint)
+      minmax(40px, 1fr);
   }
 
   @include for-normal-layout {
     background-color: purple;
     grid-template-columns:
-      minmax(20px, 1fr)
+      minmax(40px, 1fr)
       minmax(auto, $narrow-breakpoint)
-      minmax(20px, 1fr);
+      minmax(40px, 1fr);
   }
 
   @include for-wide-layout {
     background-color: yellow;
     grid-template-columns:
-      minmax(20px, 1fr)
+      minmax(80px, 1fr)
       minmax(auto, $normal-breakpoint)
-      minmax(20px, 1fr);
+      minmax(80px, 1fr);
   }
 }
 
