--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -7,6 +7,8 @@ $clr5: #95adbe;
 $clr6: #dff0ea;
 
 // Breakpoints
-$mobile-breakpoint: 460px;
-$narrow-breakpoint: 720px;
-$normal-breakpoint: 960px;
+$mobile-breakpoint: 502px;
+$tablet-breakpoint: 902px;
+$narrow-breakpoint: 1048px;
+$normal-breakpoint: 1560px;
+$wide-breakpoint: 1720px;
