--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,11 +1,11 @@
 // Colors
 $clr1: #fff;
-$clr2: #ce2e6c;
+$clr2: #ff385c;
 $clr3: #4f3a65;
 $clr4: #574f7d;
 $clr5: #95adbe;
 $clr6: #dff0ea;
-
+$clr7: #000000;
 // Breakpoints
 $mobile-breakpoint: 502px;
 $tablet-breakpoint: 902px;
