--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -8,7 +8,7 @@
   grid-template-columns: 10px 1fr 10px;
   padding: 0;
   border: 1px solid black;
-  // background-color: beige;
+  background-color: beige;
 
   > * {
     grid-column: 2;
