--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -1,31 +1,31 @@
 /* Breakpoint mixins */
 
 @mixin for-mobile-layout {
-    @media (max-width: calc($mobile-breakpoint + 40px)) {
-        @content;
-    }
-}
-
-@mixin for-tablet-layout {
-    @media (max-width: calc($mobile-breakpoint + 40px)) {
-        @content;
-    }
-}
-
-@mixin for-narrow-layout {
     @media (min-width: calc($mobile-breakpoint + 40px)) {
         @content;
     }
 }
 
-@mixin for-normal-layout {
+@mixin for-tablet-layout {
+    @media (min-width: calc($tablet-breakpoint + 40px)) {
+        @content;
+    }
+}
+
+@mixin for-narrow-layout {
     @media (min-width: calc($narrow-breakpoint + 40px)) {
         @content;
     }
 }
 
-@mixin for-wide-layout {
+@mixin for-normal-layout {
     @media (min-width: calc($normal-breakpoint + 40px)) {
+        @content;
+    }
+}
+
+@mixin for-wide-layout {
+    @media (min-width: calc($wide-breakpoint + 40px)) {
         @content;
     }
 }
