--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -1,9 +1,12 @@
 .stay-details {
   border: 1px solid black;
-  //   background-color: antiquewhite;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.3);
   margin-top: 110px;
   display: grid;
   margin-bottom: 50px;
+  h1 {
+    font-size: 26px;
+  }
 }
 
 .img-container {
@@ -47,7 +50,10 @@
     'a3 a5';
   grid-template-columns: minmax(0, 1.4fr) minmax(0, 1fr);
 }
+
 .stay-ferrites {
+  grid-area: a1;
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
 
@@ -66,11 +72,30 @@
 
   .ferrites-main {
     display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
     flex-direction: column;
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
     .line {
       display: flex;
     }
+  }
+}
+
+.aircover {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  grid-area: a2;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.3);
+}
+
+.offers {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  grid-area: a2;
+  .offer {
+    display: flex;
+    gap: 7px;
   }
 }
 // @media (min-width: 550px) {
@@ -85,18 +110,18 @@
 //   }
 // }
 
-@media (min-width: 750px) {
-  .stay-details {
-    margin-right: 5%;
-    margin-left: 5%;
-    grid-template-areas:
-      'stay-review'
-      'img-container';
-    //   'details-container'
-    //   'reviews'
-    //   'details-map';
-  }
-}
+// @media (min-width: 750px) {
+//   .stay-details {
+//     margin-right: 5%;
+//     margin-left: 5%;
+//     grid-template-areas:
+//       'stay-review'
+//       'img-container';
+//     //   'details-container'
+//     //   'reviews'
+//     //   'details-map';
+//   }
+// }
 
 // @media (min-width: 950px) {
 //   .stay-details {
