--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,4 +16,7 @@
 @import 'cmps/UserMsg';
 @import 'cmps/ReviewList';
 @import 'cmps/StayList';
+
+// Detalis
 @import 'cmps/StayDetails';
+@import 'cmps/DetailsOrderBox';
