--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -1,5 +1,5 @@
 .stay-details {
-  border: 1px solid black;
+  // border: 1px solid black;
   border-bottom: 1px solid rgba(128, 128, 128, 0.3);
   margin-top: 110px;
   display: grid;
