more layout design

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -2,14 +2,35 @@
   max-width: 1500px;
   padding: 10px;
 }
-
+// #main-app {
+//   &.details-grid {
+//     .main-container {
+//       display: grid;
+//       grid-template-columns: 50px 1fr 50px;
+//       padding: 0;
+//       border: 1px solid black;
+//     }
+//   }
+//   // &.main-container {
+//   //   display: grid;
+//   //   grid-template-columns: 10px 1fr 10px;
+//   //   padding: 0;
+//   //   border: 1px solid black;
+//   // }
+// }
 .main-container {
-  display: grid;
-  grid-template-columns: 10px 1fr 10px;
-  padding: 0;
-  border: 1px solid black;
+  &.details-grid {
+    display: grid;
+    grid-template-columns: 50px 1fr 50px;
+    padding: 0;
+    border: 1px solid black;
+  }
+  // display: grid;
+  // grid-template-columns: 10px 1fr 10px;
+  // padding: 0;
+  // border: 1px solid black;
 
-  >* {
+  > * {
     grid-column: 2;
 
     &.full {
@@ -18,28 +39,23 @@
   }
 
   @include for-mobile-layout {
-    grid-template-columns:
-      minmax(24px, 1fr) minmax(auto, $mobile-breakpoint) minmax(24px, 1fr);
+    grid-template-columns: minmax(24px, 1fr) minmax(auto, $mobile-breakpoint) minmax(24px, 1fr);
   }
 
   @include for-tablet-layout {
-    grid-template-columns:
-      minmax(24px, 1fr) minmax(auto, $tablet-breakpoint) minmax(24px, 1fr);
+    grid-template-columns: minmax(24px, 1fr) minmax(auto, $tablet-breakpoint) minmax(24px, 1fr);
   }
 
   @include for-narrow-layout {
-    grid-template-columns:
-      minmax(40px, 1fr) minmax(auto, $narrow-breakpoint) minmax(40px, 1fr);
+    grid-template-columns: minmax(40px, 1fr) minmax(auto, $narrow-breakpoint) minmax(40px, 1fr);
   }
 
   @include for-normal-layout {
-    grid-template-columns:
-      minmax(40px, 1fr) minmax(auto, $normal-breakpoint) minmax(40px, 1fr);
+    grid-template-columns: minmax(40px, 1fr) minmax(auto, $normal-breakpoint) minmax(40px, 1fr);
   }
 
   @include for-wide-layout {
-    grid-template-columns:
-      minmax(80px, 1fr) minmax(auto, $wide-breakpoint) minmax(80px, 1fr);
+    grid-template-columns: minmax(80px, 1fr) minmax(auto, $wide-breakpoint) minmax(80px, 1fr);
   }
 }
 
@@ -50,7 +66,6 @@
 }
 
 .stay-card {
-
   .carousel {
     width: 100% !important;
 
