--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -7,13 +7,26 @@
   display: grid;
   grid-template-columns: 10px 1fr 10px;
   padding: 0;
-  border: 1px solid black;
 
   > * {
     grid-column: 2;
 
     &.full {
       grid-column: 1 /-1;
+    }
+  }
+
+  .details-layout {
+    display: grid;
+    grid-template-columns: 50px 1fr 50px;
+    padding: 0;
+
+    > * {
+      grid-column: 2;
+
+      &.full {
+        grid-column: 1 /-1;
+      }
     }
   }
 
