--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,8 +1,8 @@
 @font-face {
-  // font-family: caveat;
-  // src: url(../../fonts/Caveat/Caveat-Regular.ttf);
+  font-family: airbnb;
+  src: url(../fonts/Airbnb_Cereal-Bold.ttf);
 }
-@font-face {
-  // font-family: montserrat;
-  // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
-}
+// @font-face {
+//   // font-family: montserrat;
+//   // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
+// }
