--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -1,22 +1,33 @@
 .stay-list {
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  li {
-    background-color: $clr2;
-    color: $clr6;
-    padding: 5px;
-    margin: 5px;
-  }
-  a {
-    color: $clr1;
-    padding: 10px;
-  }
-  pre {
-    background-color: #ddd;
-    font-size: 0.5em;
-    color: #333;
-    padding: 0.2em;
-    margin: 0.2em;
+  // list-style: none;
+  // display: flex;
+  // flex-wrap: wrap;
+
+  // li {
+  //   background-color: $clr2;
+  //   color: $clr6;
+  //   padding: 5px;
+  //   margin: 5px;
+  // }
+
+  // a {
+  //   color: $clr1;
+  //   padding: 10px;
+  // }
+
+  // pre {
+  //   background-color: #ddd;
+  //   font-size: 0.5em;
+  //   color: #333;
+  //   padding: 0.2em;
+  //   margin: 0.2em;
+  // }
+
+  .el-carousel__item {
+    img {
+      object-fit: cover;
+    }
+
+    border-radius: 10px;
   }
 }
