--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -19,42 +19,21 @@
 //   // }
 // }
 .main-container {
-<<<<<<< HEAD
-  display: grid;
-  grid-template-columns: 10px 1fr 10px;
-  padding: 0;
-=======
   &.details-grid {
     display: grid;
-    grid-template-columns: 50px 1fr 50px;
+    grid-template-columns: minmax(100px, 300px) 1fr minmax(100px, 300px);
     padding: 0;
-    border: 1px solid black;
   }
   // display: grid;
   // grid-template-columns: 10px 1fr 10px;
   // padding: 0;
   // border: 1px solid black;
->>>>>>> f6823a780ba09af48f9c71fb752b9fe60d9d58e2
 
   > * {
     grid-column: 2;
 
     &.full {
       grid-column: 1 /-1;
-    }
-  }
-
-  .details-layout {
-    display: grid;
-    grid-template-columns: 50px 1fr 50px;
-    padding: 0;
-
-    > * {
-      grid-column: 2;
-
-      &.full {
-        grid-column: 1 /-1;
-      }
     }
   }
 
