--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -1,22 +1,34 @@
 .stay-details {
-  border: 1px solid black;
+  // border: 1px solid black;
   border-bottom: 1px solid rgba(128, 128, 128, 0.3);
-  margin-top: 110px;
+  margin-top: 0.5em;
   display: grid;
 
   margin-bottom: 50px;
   h1 {
+    font-family: font1;
     font-size: 26px;
+  }
+}
+
+.stay-review {
+  div {
+    gap: 0.5em;
+  }
+  span {
+    color: black;
   }
 }
 
 .img-container {
   display: grid;
+  border: 1px solid black;
   border-radius: 15px;
   overflow: hidden;
   padding: 0;
   max-width: 100%;
   gap: 10px;
+  height: 442px;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
   grid-template-areas:
@@ -25,6 +37,9 @@
 
   img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    overflow: hidden;
   }
   .main-img {
     grid-area: main-img;
@@ -62,7 +77,7 @@
 
   .ferrites-header {
     display: flex;
-    gap: 2em;
+    gap: 2.2em;
     justify-content: space-between;
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
     img {
