--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,6 +17,7 @@
 @import 'cmps/ReviewList';
 @import 'cmps/StayList';
 @import 'cmps/UserNav';
+@import 'cmps/InnerHeader';
 
 // Detalis
 @import 'cmps/StayDetails';
