--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -20,16 +20,16 @@
 //   // }
 // }
 .main-container {
+  display: grid;
+  grid-template-columns: 20px 1fr 20px;
+  padding: 0;
+  border: 1px solid black;
+  
   &.details-grid {
     display: grid;
     grid-template-columns: minmax(100px, 300px) 1fr minmax(100px, 300px);
     padding: 0;
   }
-
-  // display: grid;
-  // grid-template-columns: 10px 1fr 10px;
-  // padding: 0;
-  // border: 1px solid black;
 
   > * {
     grid-column: 2;
@@ -39,19 +39,19 @@
     }
   }
 
-  .details-layout {
-    display: grid;
-    grid-template-columns: 50px 1fr 50px;
-    padding: 0;
+  // .details-layout {
+  //   display: grid;
+  //   grid-template-columns: 50px 1fr 50px;
+  //   padding: 0;
 
-    > * {
-      grid-column: 2;
+  //   > * {
+  //     grid-column: 2;
 
-      &.full {
-        grid-column: 1 /-1;
-      }
-    }
-  }
+  //     &.full {
+  //       grid-column: 1 /-1;
+  //     }
+  //   }
+  // }
 
   @include for-mobile-layout {
     grid-template-columns: minmax(24px, 1fr) minmax(auto, $mobile-breakpoint) minmax(24px, 1fr);
