--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -14,6 +14,7 @@
 .stay-review {
   div {
     gap: 0.5em;
+    margin-bottom: 0.6em;
   }
   span {
     color: black;
@@ -22,12 +23,11 @@
 
 .img-container {
   display: grid;
-  border: 1px solid black;
   border-radius: 15px;
   overflow: hidden;
   padding: 0;
   max-width: 100%;
-  gap: 10px;
+  gap: 7px;
   height: 442px;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
@@ -61,7 +61,7 @@
 
 .details-container {
   display: grid;
-  grid-gap: 20px;
+  grid-gap: 30px;
   grid-template-areas:
     'a1 a4'
     'a2 a4'
