--- a/src/assets/styles/cmps/DetailsOrderBox.scss
+++ b/src/assets/styles/cmps/DetailsOrderBox.scss
@@ -4,8 +4,8 @@
   border: 1px solid #00000030;
   border-radius: 13px;
   padding: 20px;
-  //   width: 300px;
-  width: 100%;
+  width: 300px;
+  width: 75%;
   margin-left: auto;
   margin-top: 50px;
   box-shadow: 0 0 5px 5px #00000015;
