--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,8 +1,9 @@
 @font-face {
-  font-family: font1;
+  font-family: boldFont;
   src: url(../fonts/Airbnb_Cereal-Bold.ttf);
 }
+
 // @font-face {
-//   // font-family: montserrat;
-//   // src: url(../../fonts/Montserrat/Montserrat-Regular.ttf);
+//   font-family: boldFont;
+//   src: url(../fonts/AirbnbCereal-Book.ttf);
 // }
