--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -23,13 +23,14 @@
   display: grid;
   grid-template-columns: 20px 1fr 20px;
   padding: 0;
-  border: 1px solid black;
+  // border: 1px solid black;
 
   &.details-grid {
     display: grid;
-    grid-template-columns: minmax(100px, 300px) 1fr minmax(100px, 300px);
-    padding: 0;
+    // grid-template-columns: minmax(100px, 300px) 1fr minmax(100px, 300px);
+    grid-template-columns: minmax(24px, 1fr) minmax(auto, 1120px) minmax(24px, 1fr);
   }
+  padding: 0;
 
   > * {
     grid-column: 2;
