--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -1,5 +1,4 @@
 .stay-details {
-  // border: 1px solid black;
   border-bottom: 1px solid rgba(128, 128, 128, 0.3);
   margin-top: 0.5em;
   display: grid;
@@ -28,7 +27,7 @@
   padding: 0;
   max-width: 100%;
   gap: 7px;
-  height: 442px;
+  height: 455px;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr);
   grid-template-rows: minmax(0, 1fr) minmax(0, 1fr);
   grid-template-areas:
@@ -77,7 +76,7 @@
 
   .ferrites-header {
     display: flex;
-    gap: 2.2em;
+    gap: 2.8em;
     justify-content: space-between;
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
     img {
@@ -96,6 +95,10 @@
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
     .line {
       display: flex;
+      gap: 1em;
+      img {
+        width: 25px;
+      }
     }
   }
 }
