--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,7 +8,7 @@
 }
 
 html {
-  font-family: font1;
+  // font-family: font1;
   line-height: 1.6;
 }
 
@@ -23,7 +23,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: caveat;
+  // font-family: caveat;
   margin: 0 0 0.6em;
   line-height: 1;
 }
