--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,9 +1,54 @@
 @font-face {
-  font-family: boldFont;
+  font-family: Airbnb_Cereal-Bold;
   src: url(../fonts/Airbnb_Cereal-Bold.ttf);
 }
 
-// @font-face {
-//   font-family: boldFont;
-//   src: url(../fonts/AirbnbCereal-Book.ttf);
-// }
+@font-face {
+  font-family: Airbnb_Cereal-Book;
+  src: url(../fonts/Airbnb_Cereal-Book.ttf);
+}
+
+@font-face {
+  font-family: Airbnb_Cereal-Medium;
+  src: url(../fonts/Airbnb_Cereal-Medium.ttf);
+}
+
+@font-face {
+  font-family: AirbnbCereal-Book;
+  src: url(../fonts/AirbnbCereal-Book.ttf);
+}
+
+@font-face {
+  font-family: CircularAir-Light;
+  src: url(../fonts/CircularAir-Light.ttf);
+}
+
+@font-face {
+  font-family: CircularStd-Black;
+  src: url(../fonts/CircularStd-Black.ttf);
+}
+
+@font-face {
+  font-family: FlowCircular-Regular;
+  src: url(../fonts/FlowCircular-Regular.ttf);
+}
+
+@font-face {
+  font-family: Quicksand;
+  src: url(../fonts/Quicksand.ttf);
+}
+
+@font-face {
+  font-family: Montserrat-Regular;
+  src: url(../fonts/Montserrat/Montserrat-Regular.ttf);
+}
+
+@font-face {
+  font-family: Montserrat-SemiBold;
+  src: url(../fonts/Montserrat/Montserrat-SemiBold.ttf);
+}
+
+@font-face {
+  font-family: Montserrat-VariableFont;
+  src: url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf);
+}
