more header and layout

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -29,17 +29,17 @@
   }
 
   @include for-tablet-layout {
-    background-color: burlywood;
+    // background-color: burlywood;
     grid-template-columns: minmax(24px, 1fr) minmax(auto, $tablet-breakpoint) minmax(24px, 1fr);
   }
 
   @include for-narrow-layout {
-    background-color: pink;
+    // background-color: pink;
     grid-template-columns: minmax(40px, 1fr) minmax(auto, $narrow-breakpoint) minmax(40px, 1fr);
   }
 
   @include for-normal-layout {
-    background-color: aquamarine;
+    // background-color: aquamarine;
     grid-template-columns: minmax(40px, 1fr) minmax(auto, $normal-breakpoint) minmax(40px, 1fr);
   }
 
