--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -11,7 +11,7 @@
   justify-content: space-between;
   transition: 1s;
   border-bottom: solid 1px #dddddd;
-
+  position: relative;
   .flex {
     align-items: center;
     // justify-content: space-between;
