--- a/src/assets/styles/cmps/StayList.scss
+++ b/src/assets/styles/cmps/StayList.scss
@@ -1,7 +1,7 @@
 .stay-list {
   .el-carousel__item {
     .fa-heart {
-      background: none;
+      color: rgba(0, 0, 0, 0.259);
     }
 
     img {
