main layout fixed

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -8,7 +8,8 @@ $clr6: #dff0ea;
 $clr7: #000000;
 // Breakpoints
 $mobile-breakpoint: 502px;
+$mobile-big-breakpoint: 696px;
 $tablet-breakpoint: 902px;
 $narrow-breakpoint: 1048px;
-$normal-breakpoint: 1560px;
+$normal-breakpoint: 1360px;
 $wide-breakpoint: 1720px;
