--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -1,31 +1,36 @@
 /* Breakpoint mixins */
 
 @mixin for-mobile-layout {
-    @media (min-width: calc($mobile-breakpoint + 40px)) {
+    @media (max-width: calc($mobile-breakpoint + 48px)) {
+        @content;
+    }
+}
+@mixin for-mobile-big-layout {
+    @media (max-width: calc($mobile-big-breakpoint + 48px)) {
         @content;
     }
 }
 
 @mixin for-tablet-layout {
-    @media (min-width: calc($tablet-breakpoint + 40px)) {
+    @media (max-width: calc($tablet-breakpoint + 48px)) {
         @content;
     }
 }
 
 @mixin for-narrow-layout {
-    @media (min-width: calc($narrow-breakpoint + 40px)) {
+    @media (max-width: calc($narrow-breakpoint + 80px)) {
         @content;
     }
 }
 
 @mixin for-normal-layout {
-    @media (min-width: calc($normal-breakpoint + 40px)) {
+    @media (max-width: calc($normal-breakpoint + 80px)) {
         @content;
     }
 }
 
 @mixin for-wide-layout {
-    @media (min-width: calc($wide-breakpoint + 40px)) {
+    @media (min-width: calc($wide-breakpoint + 80px)) {
         @content;
     }
 }
