--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -10,9 +10,38 @@
   // border: 1px solid black;
 
   &.details-grid {
-    display: grid;
-    // grid-template-columns: minmax(100px, 300px) 1fr minmax(100px, 300px);
+    // display: grid;
+    // // grid-template-columns: minmax(100px, 300px) 1fr minmax(100px, 300px);
+    // grid-template-columns: minmax(24px, 1fr) minmax(auto, 1120px) minmax(24px, 1fr);
     grid-template-columns: minmax(24px, 1fr) minmax(auto, 1120px) minmax(24px, 1fr);
+    // @include test{
+    //   grid-template-columns: minmax(24px, 1fr) minmax(auto, 960px) minmax(24px, 1fr);
+    // }
+
+  // @include for-mobile-layout {
+  //   grid-template-columns: 24px minmax(320px, $mobile-details-breakpoint) 24px;
+  // }
+
+  // @include for-mobile-big-layout {
+  //   grid-template-columns: 24px minmax(550px, mobile-details-big-breakpoint) 24px;
+  // }
+
+  // @include for-tablet-layout {
+  //   grid-template-columns: 24px minmax(744px, $tablet-details-breakpoint) 24px;
+  // }
+
+  // @include for-narrow-layout {
+  //   grid-template-columns: 40px minmax(950px, $narrow-details-breakpoint) 40px;
+  // }
+
+  // @include for-normal-layout {
+  //   grid-template-columns: minmax(40px,1fr) minmax(1128px, $normal-details-breakpoint) minmax(40px,1fr);
+  // }
+
+  // @include for-details-wide-layout {
+  //   grid-template-columns: minmax(1fr,160px) minmax(980px, $wide-details-breakpoint) minmax(1fr,160px);
+  // }
+
   }
 
   padding: 0;
