--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -30,7 +30,43 @@
 }
 
 @mixin for-wide-layout {
-    @media (min-width: calc($wide-breakpoint + 80px)) {
+    @media (max-width: calc($wide-breakpoint + 80px)) {
+        @content;
+    }
+}
+// details
+
+@mixin for-details-mobile-layout {
+    @media (max-width: calc($mobile-details-breakpoint + 48px)) {
+        @content;
+    }
+}
+@mixin for-details-mobile-big-layout {
+    @media (max-width: calc($mobile-details-big-breakpoint + 48px)) {
+        @content;
+    }
+}
+
+@mixin for-details-tablet-layout {
+    @media (max-width: calc($tablet-details-breakpoint + 48px)) {
+        @content;
+    }
+}
+
+@mixin for-details-narrow-layout {
+    @media (max-width: calc($narrow-details-breakpoint + 80px)) {
+        @content;
+    }
+}
+
+@mixin for-details-normal-layout {
+    @media (max-width: calc($normal-details-breakpoint + 80px)) {
+        @content;
+    }
+}
+
+@mixin for-details-wide-layout {
+    @media (max-width: calc($wide-details-breakpoint + 80px)) {
         @content;
     }
 }
