--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -6,6 +6,8 @@ $clr4: #574f7d;
 $clr5: #95adbe;
 $clr6: #dff0ea;
 $clr7: #000000;
+$clr8: #222222;
+$clr9: #717171;
 // Breakpoints main (home)
 $mobile-breakpoint: 502px;
 $mobile-big-breakpoint: 696px;
