--- a/src/assets/styles/cmps/DetailsOrderBox.scss
+++ b/src/assets/styles/cmps/DetailsOrderBox.scss
@@ -155,7 +155,7 @@ span.reviews {
 span {
   padding: 0 0;
   margin: 0 0;
-  color: white;
+  // color: white;
   font-size: 16px;
   line-height: 20px;
   font-weight: 600;
