--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,7 @@
 @import 'cmps/UserMsg';
 @import 'cmps/ReviewList';
 @import 'cmps/StayList';
+@import 'cmps/StayPreview';
 @import 'cmps/UserNav';
 @import 'cmps/InnerHeader';
 
