--- a/src/assets/styles/basics/_forms.scss
+++ b/src/assets/styles/basics/_forms.scss
@@ -2,8 +2,8 @@ button {
     border:0;
     background-color: $clr1;
     color:whitesmoke;
-    padding: 5px 10px;
-    margin: 3px;
+    padding: 0px 16px;
+    // margin: 3px;
     
 }
 
