--- a/src/assets/styles/cmps/InnerHeader.scss
+++ b/src/assets/styles/cmps/InnerHeader.scss
@@ -1,116 +1,159 @@
-.flex-inner-header{
-    position: absolute;
-    top: 80px;
-    width: 100%;
-    background-color: #fff;
-    height: 91px;
-    z-index: 11;
-    transition: 1s;
-.inner-header-container {
-  position: fixed;
-  display: flex;
-  background-color: #ebebeb;
-  // background-color: black;
-  border-radius: 50px;
-  height: 64px;
-  right: calc(50% - 450px);
+.flex-inner-header {
+  position: absolute;
   top: 80px;
+  width: 100%;
+  background-color: #fff;
+  height: 91px;
   z-index: 11;
-  padding-top: 0;
-  padding-bottom: 0;
-  width: 848px;
-  border-radius: 50px;
-  justify-content: space-between;
   transition: 1s;
-  .border-inner-header {
-    width: 0;
-    margin-left: 8px;
-    padding-right: 8px;
-    height: 36px;
-    align-self: center;
-    border-left: solid 1px #dddddd;
-    margin: 0;
-  }
-  .where-to-btn {
-    width: 325px;
-    color: $clr7;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 50px;
+  .inner-header-container {
+    position: absolute;
+    display: flex;
     background-color: #ebebeb;
-    text-align: left;
-    padding-left: 24px;
-    margin: -1px -3.1px -1px;
-    div {
+    // background-color: black;
+    border-radius: 50px;
+    height: 64px;
+    right: calc(50% - 420px);
+    top: 12px;
+    z-index: 11;
+    padding-top: 0;
+    padding-bottom: 0;
+    width: 848px;
+    border-radius: 50px;
+    justify-content: space-between;
+    transition: 1s;
+    .border-inner-header {
+      width: 0;
+      // margin-inline-start: 8px;
+      // padding-right: 8px;
+      height: 36px;
+      align-self: center;
+      border-left: solid 1px #dddddd;
       margin: 0;
     }
-    input {
-      margin: 0;
-      background-color: #ebebeb;
-      cursor: pointer;
-    }
-  }
-  .where-to-btn:hover {
-    background-color: #ddd;
-    input {
-      background-color: #ddd;
-    }
-  }
-  .inner-header-dates-btn {
-    padding-top: 13px;
-    padding-bottom: 13px;
-    padding-left: 10px;
-    padding-right: 25px;
-    margin: 0;
-    align-self: center;
-    display: grid;
-    grid-template-columns: 80px 1fr;
-    grid-template-rows: 20px 1fr;
-    border-radius: 50px;
-    background-color: #ebebeb;
-    margin-left: -3px;
-    cursor: pointer;
-    div:nth-child(1) {
+    .where-to-btn {
+      width: 320px;
       color: $clr7;
       font-weight: bold;
-    }
-    div:nth-child(2) {
-      color: #777777;
-      font-weight: normal;
-      grid-row: 2;
-    }
-  }
-  .inner-header-dates-btn:hover {
-    background-color: #ddd;
-  }
-  .inner-header-search-btn {
-    display: flex;
-    justify-content: space-between;
-    width: 260px;
-    border-radius: 50px;
-    .inner-header-search-btn {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 4px;
-      margin: auto;
-      background-color: #ff385c;
-      border-radius: 50px;
-      width: 105px;
-      height: 50px;
       cursor: pointer;
-      &.big {
+      border-radius: 50px;
+      background-color: #ebebeb;
+      text-align: left;
+      padding-left: 30px;
+      margin: 0px -4.1px -1px;
+      font-family: CircularAir-Light;
+      div {
+        margin: 0;
+      }
+      input {
+        margin: 0;
+        background-color: #ebebeb;
+        font-family: CircularAir-Light;
+        font-size: 15px;
+        cursor: pointer;
+      }
+    }
+    .where-to-btn:hover {
+      background-color: #ddd;
+      input {
+        background-color: #ddd;
+      }
+    }
+    .inner-header-dates-btn {
+      padding-top: 13px;
+      padding-bottom: 13px;
+      padding-left: 25px;
+      padding-right: 23px;
+      margin: 0;
+      text-align: left;
+      align-self: center;
+      display: grid;
+      grid-template-columns: 80px 1fr;
+      grid-template-rows: 20px 1fr;
+      border-radius: 50px;
+      background-color: #ebebeb;
+      margin-left: -3px;
+      font-family: CircularAir-Light;
+      cursor: pointer;
+      div:nth-child(1) {
+        color: $clr7;
+        font-weight: bold;
+      }
+      div:nth-child(2) {
+        color: #777777;
+        font-weight: normal;
+        grid-row: 2;
+      }
+    }
+    .inner-header-dates-btn:hover {
+      background-color: #ddd;
+    }
+
+    .inner-header-search-btn-container {
+      display: flex;
+      justify-content: space-between;
+      width: 245px;
+      border-radius: 50px;
+      margin: 0px -3.5px;
+      button:nth-child(1) {
+        padding-left: 30px;
+      }
+      .inner-header-search-btn {
         display: flex;
-        font-size: 16px;
+        align-items: center;
+        justify-content: center;
+        gap: 4px;
+        margin: auto;
+        background-color: #ff385c;
+        border-radius: 50px;
+        width: 105px;
+        height: 50px;
+        cursor: pointer;
+        &.big {
+          display: flex;
+          font-size: 16px;
+        }
+      }
+      .inner-header-dates-btn-search {
+        padding-top: 13px;
+        padding-bottom: 13px;
+        padding-left: 25px;
+        padding-right: 23px;
+        margin: 0;
+        text-align: left;
+        align-self: center;
+        display: grid;
+        grid-template-columns: 80px 1fr;
+        grid-template-rows: 20px 1fr;
+        border-radius: 50px;
+        background-color: #ebebeb;
+        margin-left: -3px;
+        font-family: CircularAir-Light;
+        cursor: pointer;
+        div:nth-child(1) {
+          color: $clr7;
+          font-weight: bold;
+        }
+        div:nth-child(2) {
+          color: #777777;
+          font-weight: normal;
+          grid-row: 2;
+        }
+      }
+    }
+    .inner-header-search-btn-container:hover {
+      background-color: #ddd;
+      .inner-header-dates-btn-search{
+      background-color: #ddd;
+      }
+    }
+
+    .isActive {
+      background-color: white;
+      box-shadow: 0 0 0 1px #0000000a, 0 5px 16px #00000026;
+      input {
+        background-color: white;
       }
     }
   }
-  .isActive{
-    background-color: white;
-    box-shadow: 0 0 0 1px #0000000a, 0 5px 16px #00000026;
-    input{
-        background-color: white;
-    }
-  }
-}
 }
