--- a/src/assets/styles/cmps/DetailsOrderBox.scss
+++ b/src/assets/styles/cmps/DetailsOrderBox.scss
@@ -1,11 +1,12 @@
 .order-container {
   position: sticky;
-  top: 0;
+  top: 32px;
   border: 1px solid #00000030;
   border-radius: 13px;
-  padding: 20px;
-  width: 300px;
-  width: 75%;
+  padding: 25px 20px 20px 20px;
+  // width: 300px;
+  height: max-content;
+  width: 88%;
   margin-left: auto;
   margin-top: 50px;
   box-shadow: 0 0 5px 5px #00000015;
@@ -26,6 +27,7 @@
   border: 1px solid #00000050;
   border-radius: 13px;
   margin-bottom: 15px;
+  margin-top: 5px;
 }
 
 .date-picker {
@@ -51,7 +53,7 @@
   flex-direction: column;
   gap: 5px;
   border-top: 1px solid #00000050;
-  padding: 7px 12px;
+  padding: 13px 12px;
   color: gray;
   font-size: 0.75rem;
 
@@ -93,7 +95,7 @@ span.reviews {
   width: 100%;
   height: 48px;
   padding: 0 0;
-  margin: 0 0;
+  margin: 13px 0px 7px 0px;
   cursor: pointer;
   border: none;
   display: grid;
@@ -159,7 +161,20 @@ span {
   font-size: 16px;
   line-height: 20px;
   font-weight: 600;
-  font-family: sans-serif;
+  // font-family: sans-serif;
+}
+
+.price-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3em;
+  p {
+    margin: 0;
+  }
+}
+
+.total {
+  margin-block-start: 1em;
 }
 
 p.footer {
