--- a/src/assets/styles/cmps/InnerHeader.scss
+++ b/src/assets/styles/cmps/InnerHeader.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 80px;
   width: 100%;
-  background-color: #fff;
+  // background-color: #fff;
   height: 91px;
   z-index: 11;
   transition: 1s;
@@ -14,7 +14,7 @@
     border-radius: 50px;
     height: 64px;
     right: calc(50% - 420px);
-    top: 12px;
+    top: -5px;
     z-index: 11;
     padding-top: 0;
     padding-bottom: 0;
@@ -32,6 +32,7 @@
       margin: 0;
     }
     .where-to-btn {
+      position: relative;
       width: 320px;
       color: $clr7;
       font-weight: bold;
@@ -51,6 +52,24 @@
         font-family: CircularAir-Light;
         font-size: 15px;
         cursor: pointer;
+      }
+
+      .stay-where-search {
+        position: absolute;
+        display: none;
+        top: 154px;
+        width: 848px;
+        right: calc(50% - 450px);
+        height: 450px;
+        padding: 16px 32px;
+        border-radius: 32px;
+        z-index: 8;
+        background-color: #fff;
+        grid-template-columns: 1fr 35.5px 0.8fr;
+        .mosley-search-container > * {
+          padding: 8px 8px 8px 24px;
+          cursor: pointer;
+        }
       }
     }
     .where-to-btn:hover {
@@ -90,6 +109,7 @@
     }
 
     .inner-header-search-btn-container {
+      position: relative;
       display: flex;
       justify-content: space-between;
       width: 245px;
@@ -143,8 +163,8 @@
     }
     .inner-header-search-btn-container:hover {
       background-color: #ddd;
-      .inner-header-dates-btn-search{
-      background-color: #ddd;
+      .inner-header-dates-btn-search {
+        background-color: #ddd;
       }
     }
 
