--- a/src/assets/styles/cmps/StayPreview.scss
+++ b/src/assets/styles/cmps/StayPreview.scss
@@ -2,17 +2,53 @@
     font-family: CircularAir-Light;
     color: $clr9;
     font-size: 15px;
-    line-height: 1.125rem;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    height: fit-content;
-    padding-block-start: 1px;
-    margin: 0;
+
+    .el-carousel__item h3 {
+        color: #475669;
+        opacity: 0.75;
+        line-height: 300px;
+        margin: 0;
+        text-align: center;
+    }
+
+    .el-carousel__item:nth-child(2n) {
+        background-color: #99a9bf;
+    }
+
+    .el-carousel__item:nth-child(2n + 1) {
+        background-color: #d3dce6;
+    }
+
+    .el-carousel__item {
+        .fa-heart {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            color: rgba(0, 0, 0, 0.259);
+        }
+
+        img {
+            object-fit: cover;
+        }
+
+        border-radius: 10px;
+    }
+
+    // margin: 0;
 
     .stay-name {
-        font-family: Airbnb_Cereal-Medium;
+        // font-family: Airbnb_Cereal-Medium;
         color: $clr8;
+        justify-content: space-between;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+
+        .rate {
+            margin-inline-end: 0;
+        }
     }
+
 
     .cost {
         font-family: AirbnbCereal-Book;
