--- a/src/assets/styles/cmps/InnerHeader.scss
+++ b/src/assets/styles/cmps/InnerHeader.scss
@@ -56,20 +56,72 @@
 
       .stay-where-search {
         position: absolute;
-        display: none;
-        top: 154px;
+        display: grid;
+        top: 81px;
         width: 848px;
-        right: calc(50% - 450px);
+        right: calc(50% - 685px);
         height: 450px;
         padding: 16px 32px;
         border-radius: 32px;
         z-index: 8;
         background-color: #fff;
         grid-template-columns: 1fr 35.5px 0.8fr;
-        .mosley-search-container > * {
+        .counries-search-container > * {
           padding: 8px 8px 8px 24px;
+          width: 100%;
+          color: #8f8f8f;
+          font-family: CircularAir-Light;
           cursor: pointer;
         }
+        .counries-search-container > *:hover {
+          background-color: #f7f7f7;
+          border-bottom-left-radius: 3px;
+          border-bottom-right-radius: 3px;
+        }
+        .counries-search-container > * > :first-child {
+          display: flex;
+          justify-content: center;
+          flex-wrap: wrap;
+          align-content: center;
+          background-color: #ddd;
+          width: 44px;
+          height: 44px;
+          border-radius: 12px;
+          margin-right: 16px;
+        }
+        .counries-search-container > * > span {
+          align-self: center;
+        }
+        .line-between-where-search {
+          height: 100%;
+          border-left: solid 1px rgba(128, 128, 128, 0.2588235294);
+          padding: 0;
+        }
+        .chose-mainland {
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          grid-template-rows: 1fr 1fr;
+          row-gap: 24px;
+          column-gap: 5px;
+          .mainland-img {
+            width: 122px;
+            height: 122px;
+            cursor: pointer;
+            padding: 0;
+            margin: 0;
+            border-radius: 10px;
+            box-sizing: inherit;
+            border: rgba(34, 34, 34, 0) solid 1px;
+          }
+          .mainland-img:hover {
+            border-color: #222;
+          }
+        }
+      }
+      .stay-where-search > div {
+        justify-self: start;
+        width: 100%;
+        padding-top: 30px;
       }
     }
     .where-to-btn:hover {
@@ -175,5 +227,33 @@
         background-color: white;
       }
     }
+    .isActive:hover{
+      background-color: white;
+      input {
+        background-color: white;
+      }
+    }
+    .inner-header-dates-btn-search {
+        &.isActive{
+          background-color: white;
+        }
+      }
+  }
+}
+.calender-container {
+  position: absolute;
+  display: grid;
+  top: 81px;
+  width: 848px;
+  right: calc(50% - 420px);
+  height: 450px;
+  padding: 16px 32px;
+  padding-bottom: 24px;
+  border-radius: 32px;
+  z-index: 8;
+  background-color: #fff;
+  .calendar-inner-section{
+    width: 700px;
+    height: 560px;
   }
 }
