--- a/src/assets/styles/cmps/DetailsReviews.scss
+++ b/src/assets/styles/cmps/DetailsReviews.scss
@@ -1,13 +1,26 @@
 .reviews-container {
   border: 1px solid black;
+  padding: 0.5em;
 }
 
 .reviews-rate {
-  border: 1px solid salmon;
+  gap: 0.5em;
+  align-items: center;
+  a {
+    color: black;
+  }
+  span {
+    font-size: 1.13em;
+  }
 }
 
 .rating {
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+
+  p {
+    margin: 0;
+  }
   progress {
     height: 4px;
     border-radius: 40px;
